2002-05-29  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Due to missing features on Solaris: removed "kill IP
	options", replaced setenv with putenv, replaced inet_ntoa with
	inet_addr.

	* onenetd.c: Added escape characters in response string.

2002-05-29  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Initial release.
	